--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,5 +4,7 @@ jobs:
  hello:
   runs-on: ubuntu-latest
   steps:
-   - run: echo "Hello, world"
+   - run:
+      echo "Hello, world"
+      echo "Hello, world"
    - uses: actions/checkout@v4
