--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -2,9 +2,9 @@ name: Hello
 on: push
 jobs:
  hello:
-  runs-on: ubuntu-latest
+  run-on: ubuntu-latest
   steps:
-      - run: |
+   - run: |
       echo "Hello, world"
       echo "Hello, world"
    - uses: actions/checkout@v4
