--- a/.github/workflows/literals.yml
+++ b/.github/workflows/literals.yml
@@ -8,6 +8,6 @@ jobs:
               env:
                 LITERAL_NULL: ${{ null }}
                 LITERAL_BOOLEAN: ${{ true }}
-                LITERAL_NUMBER: ${{ 1234 }}
+                LTERAL_NUMBER: ${{ 1234 }}
                 LITERAL_STRING: ${{ 'Hello' }}
                 LITERAL_OMIT_STRING: World
