--- a/.github/workflows/status-check-functions.yml
+++ b/.github/workflows/status-check-functions.yml
@@ -6,4 +6,6 @@ jobs:
         steps:
             - run: exit 1
             - run: echo "Hello"
+            - run: echo hoge
+            - run: echo "fuga"
               if: ${{ failure() }}
