--- a/.github/workflows/status-check-functions.yml
+++ b/.github/workflows/status-check-functions.yml
@@ -6,6 +6,7 @@ jobs:
         steps:
             - run: exit 1
             - run: echo "Hello"
+              if: ${{ failure() }}
             - run: echo hoge
             - run: echo "fuga"
               if: ${{ failure() }}
