test5 status-check-function

--- a/.github/workflows/status-check-functions.yml
+++ b/.github/workflows/status-check-functions.yml
@@ -14,5 +14,6 @@ jobs:
               if: ${{ success() }}
             - run: echo "fuga"
               if: ${{ failure() }}
+            - run: echo "fuga" # 上で失敗しているので走らない
             - run: echo "hoo"
               if: ${{ always() }}
