--- a/.github/workflows/conditions-workflow.yml
+++ b/.github/workflows/conditions-workflow.yml
@@ -2,7 +2,7 @@ name: Conditions workflow
 on: push
 jobs:
     skip-or-run:
-        if: ${{ github.actor == 'octocat' }}
+        if: ${{ github.actor == 'a2308a2308' }}
         runs-on: ubuntu-latest
         steps:
             - run: echo "Hello"
