test1 missing-share-data.yml

--- a/.github/workflows/missing-share-data.yml
+++ b/.github/workflows/missing-share-data.yml
@@ -4,5 +4,5 @@ jobs:
     share:
         runs-on: ubuntu-latest
         steps:
-            - run: eport RESULT="hello"
+            - run: export RESULT="hello"
             - run: echo "${RESULT}"
