--- a/.github/workflows/github-output.yml
+++ b/.github/workflows/github-output.yml
@@ -4,8 +4,8 @@ jobs:
     share:
         runs-on: ubuntu-latest
         steps:
-            - id: source
-              run: echo "result=Hello" >> "${GITHUB_OUTPUT}"
+            - id: hoge 
+              run: echo "kekka=Hello" >> "${GITHUB_OUTPUT}"
             - env:
-                 RESULT: ${{ steps.source.outputs.result }}
+                 RESULT: ${{ steps.hoge.outputs.kekka}}
               run: echo "${RESULT}"
