dedted teset. yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
 jobs:
     test:
         runs-on: ubuntu-latest
-        stesps:
+        steps:
             - uses: actions/checkout@4
             - uses: actions/setup-go@5
               with:
