test1 change.yml

--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -3,7 +3,7 @@ on: push
 jobs:
     print:
         runs-on: ubuntu-latest
-        steps: bash
+        steps: 
             - shell: bash
               run: echo "${SHELL}"
             - shell: python
