print-githubworkflow.yml

--- a/.github/workflows/print-githubworkflow.yml
+++ b/.github/workflows/print-githubworkflow.yml
@@ -6,4 +6,4 @@ jobs:
         env:
             WORKFLOW: ${{ github.workflow }}
         steps:
-            - runs: echo "${WORKFLOW}"
+            - run: echo "${WORKFLOW}"
